SimplestCRUDExample-main/src/main/java/com/example/SimplestCRUDExample/Error/CustomErrorResponse.java
package com.example.SimplestCRUDExample.Error;

public class CustomErrorResponse {

    String responseCode;
    String responseMsg;
    int status;
    String timestamp;

    public CustomErrorResponse(String responseCode, String responseMsg) {
        super();
        this.responseCode = responseCode;
        this.responseMsg = responseMsg;
    }

    public String getResponseCode() {
        return responseCode;
    }

    public void setResponseCode(String responseCode) {
        this.responseCode = responseCode;
    }

    public String getResponseMsg() {
        return responseMsg;
    }

    public void setResponseMsg(String responseMsg) {
        this.responseMsg = responseMsg;
    }

    public int getStatus() {
        return status;
    }

    public void setStatus(int status) {
        this.status = status;
    }

    public String getTimestamp() {
        return timestamp;
    }

    public void setTimestamp(String timestamp) {
        this.timestamp = timestamp;
    }
}